2005-01-11 Alasdair Allan <aa@astro.ex.ac.uk>

        * bin/user_agent.pl: Fulling working 3G user_agent.pl which will 
          talk to the 2G node_agent.pl running on dn2.astro.ex.ac.uk. This 
          user agent should be a lot more robust that the equivalent 2G 
          version as a lot of the nastiest as been refactored out into
          singleton classes.
          
        * bin/jach_agent.pl: Some refactoring, should now work (fully 3G?)
          but doesn't run up due to problems with OMP::SciProg modules.  

2005-01-10 Alasdair Allan <aa@astro.ex.ac.uk>

        * Extensive modifications to move the Config::Simple() backend into
          a singleton object. Modifications to user_agent.pl and to the
          eSTAR::UA::Handler to support the creation of an eSTAR::Config
          singleton class. Also modified eSTAR::Util.
          
          All other agent processes now need modifying to use the same
          code base. The user_agent.pl has been tested sucessfully against
          dn2.astro in SingleExposure mode only running on estar.astro,
          need to install NAG f95 onto estar.astro to test in Followup mode.
        
        * bin/make_observation.pl: Ported from second generation code base
          to help test the user_agent.pl against dn2.astro.
          
2004-12-21 Alasdair Allan <aa@astro.ex.ac.uk>

        * Fixes to get rid of the last $main::* references from the library
          code. All access to main:: resources should now be going through
          single instance objects such as eSTAR::Process and eSTAR::UserAgent
          
2004-11-12 Alasdair Allan <aa@astro.ex.ac.uk>

        * Large number of changes to make the jach_agent.pl code to actually
          work. All ESTAR2_* and ESTAR3_* environment variables have been
          removed, gone back to ESTAR_* variables. We shouldn't need to 
          ever run the old code again and the multiply defined PERL5LIB 